--- a/src/main/resources/templates/user-details.html
+++ b/src/main/resources/templates/user-details.html
@@ -87,9 +87,10 @@
                     </li>
 
                     <li class="nav-item">
-<<<<<<< Updated upstream
-                        <a class="nav-link profile-navbar-text" th:attr="data-url=@{/user-details/wish-list(size=(${#request.getParameter('size')} ?: '2'),id=${user.getUserId()}, page=(${#request.getParameter('page')} ?: '1'))}"
->>>>>>> Stashed changes
+
+                        <a class="nav-link profile-navbar-text"
+                           th:attr="data-url=@{/user-details/wish-list(size=(${#request.getParameter('size')} ?: '2'),id=${user.getUserId()}, page=(${#request.getParameter('page')} ?: '1'))}"
+
                            th:href="@{#wish-list}">Wish
                             List</a>
                     </li>
