--- a/src/main/resources/templates/user_details/_wish-list.html
+++ b/src/main/resources/templates/user_details/_wish-list.html
@@ -33,25 +33,25 @@
                                                 <td th:text="${product.getProductName()}"></td></a>
                                             </div>
 
-                                             <span th:if="${product.getProductTypeName() == 'Book' || product.getProductTypeName() == 'E-Book' || product.getProductTypeName() == 'Audio Book'}">
+                                             <div th:if="${product.getProductTypeName() == 'Book' || product.getProductTypeName() == 'E-Book' || product.getProductTypeName() == 'Audio Book'}">
                                                  <div class="product_text">
-                                                     <div th:each="authors : ${product.getAuthors()}">
-                                                         <td th:text="${authors}"></td>
-                                                     </div>
+                                                     <span th:each="authors, iterStat : ${product.getAuthors()}"
+                                                           th:text="${!iterStat.last} ? ${authors} + ', ': ${authors}" style="display:inline">
+                                                     </span>
                                                  </div>
-                                             </span>
+                                             </div>
                                             <!-- Case Brand -->
-                                            <span th:if="${product.getProductTypeName() == 'E-Book Reader Case' || product.getProductTypeName() == 'Book Case'}">
+                                            <div th:if="${product.getProductTypeName() == 'E-Book Reader Case' || product.getProductTypeName() == 'Book Case'}">
                                                 <div class="product_text">
                                                     <td th:text="${product.getCaseBrand()}"></td>
                                                 </div>
-                                            </span>
+                                            </div>
                                             <!-- Tablet Brand -->
-                                            <span th:if="${product.getProductTypeName() == 'E-Book Reader'}">
+                                            <div th:if="${product.getProductTypeName() == 'E-Book Reader'}">
                                                 <div class="product_text">
                                                     <td th:text="${product.getReaderBrand()}"></td>
                                                 </div>
-                                            </span>
+                                            </div>
                                         </div>
                                     </a>
                                 </div>
