--- a/src/main/resources/templates/admin-panel.html
+++ b/src/main/resources/templates/admin-panel.html
@@ -64,7 +64,8 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link profile-navbar-text" th:attr="data-url=@{/admin-panel/product(size=(${#request.getParameter('size')} ?: '3'), page=(${#request.getParameter('page')} ?: '1'))}"
+                        <a class="nav-link profile-navbar-text"
+                           th:attr="data-url=@{/admin-panel/product(size=(${#request.getParameter('size')} ?: '3'), page=(${#request.getParameter('page')} ?: '1'))}"
                            th:href="@{#product}">Products</a>
                     </li>
 
@@ -75,7 +76,8 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link profile-navbar-text" th:attr="data-url=@{/admin-panel/hotList(size=(${#request.getParameter('size')} ?: '3'), page=(${#request.getParameter('page')} ?: '1'))}" th:href="@{#hotList}">Hot
+                        <a class="nav-link profile-navbar-text"
+                           th:attr="data-url=@{/admin-panel/hotList(size=(${#request.getParameter('size')} ?: '3'), page=(${#request.getParameter('page')} ?: '1'))}" th:href="@{#hotList}">Hot
                             Lists</a>
                     </li>
 
@@ -86,12 +88,8 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link profile-navbar-text" data-url="/admin-panel/order"
-                           th:href="@{#order}">Orders</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link profile-navbar-text" data-url="/admin-panel/pending-order"
+                        <a class="nav-link profile-navbar-text"
+                           th:attr="data-url=@{/admin-panel/pending-order(size=(${#request.getParameter('size')} ?: '3'), page=(${#request.getParameter('page')} ?: '1'))}"
                            th:href="@{#pending-order}">Pending Orders</a>
                     </li>
 
@@ -122,9 +120,6 @@
 
                     <!-- Product -->
                     <div class="tab-pane" id="product"></div>
-
-                    <!-- Order -->
-                    <div class="tab-pane" id="order"></div>
 
                     <!-- Pending Order -->
                     <div class="tab-pane" id="pending-order"></div>
