--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -9,14 +9,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Favicon  -->
-    <link rel="icon" href="images/logo/book_your_shelf_tab.png">
-    <link rel="stylesheet" type="text/css" href="styles/bootstrap-4.1.2/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="plugins/font-awesome-4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="styles/cart.css">
-    <link rel="stylesheet" type="text/css" href="styles/cart_responsive.css">
-    <link rel="stylesheet" type="text/css" href="styles/responsive.css">
-    <link rel="stylesheet" type="text/css" href="styles/core-style.css">
-    <link rel="stylesheet" type="text/css" href="styles/util.css">
+    <link rel="icon" th:href="@{/static/images/logo/book_your_shelf_tab.png}">
+    <link rel="stylesheet" type="text/css" th:href="@{/static/styles/bootstrap-4.1.2/bootstrap.min.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/static/plugins/font-awesome-4.7.0/css/font-awesome.min.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/static/styles/cart.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/static/styles/cart_responsive.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/static/styles/responsive.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/static/styles/core-style.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/static/styles/util.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/static/styles/iziToast.min.css}">
 </head>
 
@@ -120,16 +120,36 @@
                                                 </div>
                                                 <div class="product_quantity_container quantities">
                                                     <div class="product_quantity ml-lg-auto mr-lg-auto text-center relativer">
-                                                        <div th:id="${product.getProductId()}" class="qty_sub qty_button trans_200 text-center" >-
+                                                        <div th:id="${product.getProductId()}" name="qty_sub" class="qty_sub qty_button trans_200 text-center" >-
                                                         </div>
 
-                                                        <span class="product_text product_num" th:id="'quantity' + ${product.getProductId()}">1</span>
+                                                        <span class="product_text product_num" th:id="'quantity' + ${product.getProductId()}">
+                                                            <span th:if="${product.getQuantity() == 0}" style="display:inline">
+                                                                <td th:text="${'1'}"></td>
+                                                            </span>
+                                                            <span th:unless="${product.getQuantity() == 0}" style="display:inline">
+                                                                <td th:text="${product.getQuantity()}"></td>
+                                                            </span>
+                                                        </span>
 
-                                                        <div th:id="${product.getProductId()}" class="qty_add qty_button trans_200 text-center" >+
+                                                        <div th:id="${product.getProductId()}" name="qty_add" class="qty_add qty_button trans_200 text-center" >+
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div id="product-price" class="product_total product_text"><span>Total: </span> <span th:id="'second-try' + ${product.getProductId()}" class="total" style="display:inline" th:text="${product.getPrice() - product.getPrice() * product.getDiscountRate()}"></span><span style="display:inline">₺</span></div>
+                                                <div id="product-price" class="product_total product_text"><span>Total: </span>
+                                                    <span th:if="${product.getQuantityPrice() == 0}" style="display: inline">
+
+                                                        <span th:id="'second-try' + ${product.getProductId()}" class="total" style="display:inline" th:text="${product.getPrice() - product.getPrice() * product.getDiscountRate()}"></span>
+                                                        <span style="display:inline">₺</span>
+
+                                                    </span>
+                                                    <span th:unless="${product.getQuantityPrice() == 0}" style="display:inline">
+
+                                                       <span th:id="'second-try' + ${product.getProductId()}" class="total" style="display:inline" th:text="${product.getQuantityPrice()}"></span>
+                                                        <span style="display:inline">₺</span>
+                                                    </span>
+
+                                                </div>
                                                 <div th:id="${product.getProductId()}" name="add_to_wish_list" class="product_total product_text to_wish_list"><a href="/cart"
                                                                                                                                                                   title="Add to wish list">
                                                     <button style="font-size:30px"><i class="fa fa-heart product_text"></i>
@@ -248,22 +268,22 @@
     </div>
 </div>
 
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <script src="styles/bootstrap-4.1.2/popper.js"></script>
-    <script src="styles/bootstrap-4.1.2/bootstrap.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="plugins/greensock/TweenMax.min.js"></script>
-    <script src="plugins/greensock/TimelineMax.min.js"></script>
-    <script src="plugins/scrollmagic/ScrollMagic.min.js"></script>
-    <script src="plugins/greensock/animation.gsap.min.js"></script>
-    <script src="plugins/greensock/ScrollToPlugin.min.js"></script>
-    <script src="plugins/OwlCarousel2-2.2.1/owl.carousel.js"></script>
-    <script src="plugins/easing/easing.js"></script>
-    <script src="plugins/progressbar/progressbar.min.js"></script>
-    <script src="plugins/parallax-js-master/parallax.min.js"></script>
-    <script src="js/classy-nav.min.js"></script>
-    <script src="js/custom.js"></script>
-    <script src="js/active.js"></script>
+    <script th:src="@{/static/js/jquery-3.2.1.min.js}"></script>
+    <script th:src="@{/static/styles/bootstrap-4.1.2/popper.js}"></script>
+    <script th:src="@{/static/styles/bootstrap-4.1.2/bootstrap.min.js}"></script>
+    <script th:src="@{/static/js/plugins.js}"></script>
+    <script th:src="@{/static/plugins/greensock/TweenMax.min.js}"></script>
+    <script th:src="@{/static/plugins/greensock/TimelineMax.min.js}"></script>
+    <script th:src="@{/static/plugins/scrollmagic/ScrollMagic.min.js}"></script>
+    <script th:src="@{/static/plugins/greensock/animation.gsap.min.js}"></script>
+    <script th:src="@{/static/plugins/greensock/ScrollToPlugin.min.js}"></script>
+    <script th:src="@{/static/plugins/OwlCarousel2-2.2.1/owl.carousel.js}"></script>
+    <script th:src="@{/static/plugins/easing/easing.js}"></script>
+    <script th:src="@{/static/plugins/progressbar/progressbar.min.js}"></script>
+    <script th:src="@{/static/plugins/parallax-js-master/parallax.min.js}"></script>
+    <script th:src="@{/static/js/classy-nav.min.js}"></script>
+    <script th:src="@{/static/js/custom.js}"></script>
+    <script th:src="@{/static/js/active.js}"></script>
     <script th:src="@{/static/js/iziToast.min.js}"></script>
 
     <script th:inline="javascript">
@@ -368,6 +388,13 @@
             event.preventDefault();
             $.post("/cart" , ret , function (data) {
                 window.location.href = "/checkout";
+            }).fail(function (data) {
+                iziToast.show({
+                    title: 'Fail',
+                    message: data.responseText,
+                    position: 'topRight',
+                    color: 'red'
+                });
             })
         });
 
@@ -379,24 +406,50 @@
 
         $('.qty_add').click(function () {
             var productID = $(this).attr("id");
+            var button = $(this).attr("name");
             var p= $('#trying' + productID).text();
             var value = parseInt(document.getElementById('quantity' + productID).textContent, 10);
             value = isNaN(value) ? 0 : value;
             value++;
             document.getElementById('quantity'+ productID).textContent = value;
+            var quantity = value;
+            var  quantityPrice = (p * value).toFixed(2);
             document.getElementById('second-try' + productID).textContent = (p * value).toFixed(2);
+
+            var ret = {
+                productID : productID,
+                button: button,
+                quantity: quantity,
+                quantityPrice: quantityPrice
+            };
+
+            $.post("/cart" , ret , function (data) {
+            })
 
         });
 
         $('.qty_sub').click(function () {
             var productID = $(this).attr("id");
+            var button = $(this).attr("name");
             var p= $('#trying' + productID).text();
             var value = parseInt(document.getElementById('quantity'+ productID).textContent, 10);
             value = isNaN(value) ? 0 : value;
             value <= 1 ? value = 2 : '';
             value--;
             document.getElementById('quantity'+ productID).textContent = value;
+            var quantity = value;
+            var  quantityPrice = (p * value).toFixed(2);
             document.getElementById('second-try' + productID).textContent =(p * value).toFixed(2);
+
+            var ret = {
+                productID : productID,
+                button: button,
+                quantity: quantity,
+                quantityPrice: quantityPrice
+            };
+
+            $.post("/cart" , ret , function (data) {
+            })
         });
 
 
