--- a/src/main/resources/templates/user_details/_wish-list.html
+++ b/src/main/resources/templates/user_details/_wish-list.html
@@ -18,62 +18,57 @@
             <!-- Cart Items -->
             <div class="cart_items">
                 <ul class="cart_items_list">
-                    <span th:unless="${#lists.isEmpty(wishListProducts)}">
-                        <tr th:each="product : ${wishListProducts}">
-                            <li class="cart_item item_list d-flex flex-lg-row flex-column align-items-lg-center align-items-start justify-content-lg-end justify-content-start">
-                                <div class="product-row d-flex flex-lg-row flex-column align-items-lg-center align-items-start justify-content-start mr-auto">
-                                    <a th:href="'/product/' + ${product.getProductId()}">
-                                        <div>
-                                            <div class="product_image"><img
-                                                    src="images/seker_portakali.jpg" alt=""
-                                                    class="product_image_img"></div>
+                    <tr th:each="product : ${wishListPage}">
+                        <li class="cart_item item_list d-flex flex-lg-row flex-column align-items-lg-center align-items-start justify-content-lg-end justify-content-start">
+                            <div class="product-row d-flex flex-lg-row flex-column align-items-lg-center align-items-start justify-content-start mr-auto">
+                                <a th:href="'/product/' + ${product.getProductId()}">
+                                    <div>
+                                        <div class="product_image"><img
+                                                src="images/seker_portakali.jpg" alt=""
+                                                class="product_image_img"></div>
+                                    </div>
+                                    <div class="product_name_container">
+                                        <div class="cart-product-name"><a th:href="'/product/' + ${product.getProductId()}">
+                                            <td th:text="${product.getProductName()}"></td></a>
                                         </div>
-                                        <div class="product_name_container">
-                                            <div class="cart-product-name"><a th:href="'/product/' + ${product.getProductId()}">
-                                                <td th:text="${product.getProductName()}"></td></a>
-                                            </div>
 
-                                             <div th:if="${product.getProductTypeName() == 'Book' || product.getProductTypeName() == 'E-Book' || product.getProductTypeName() == 'Audio Book'}">
-                                                 <div class="product_text">
-                                                     <span th:each="authors, iterStat : ${product.getAuthors()}"
-                                                           th:text="${!iterStat.last} ? ${authors} + ', ': ${authors}" style="display:inline">
-                                                     </span>
-                                                 </div>
+                                         <div th:if="${product.getProductTypeName() == 'Book' || product.getProductTypeName() == 'E-Book' || product.getProductTypeName() == 'Audio Book'}">
+                                             <div class="product_text">
+                                                 <span th:each="authors, iterStat : ${product.getAuthors()}"
+                                                       th:text="${!iterStat.last} ? ${authors} + ', ': ${authors}" style="display:inline">
+                                                 </span>
                                              </div>
-                                            <!-- Case Brand -->
-                                            <div th:if="${product.getProductTypeName() == 'E-Book Reader Case' || product.getProductTypeName() == 'Book Case'}">
-                                                <div class="product_text">
-                                                    <td th:text="${product.getCaseBrand()}"></td>
-                                                </div>
-                                            </div>
-                                            <!-- Tablet Brand -->
-                                            <div th:if="${product.getProductTypeName() == 'E-Book Reader'}">
-                                                <div class="product_text">
-                                                    <td th:text="${product.getReaderBrand()}"></td>
-                                                </div>
+                                         </div>
+                                        <!-- Case Brand -->
+                                        <div th:if="${product.getProductTypeName() == 'E-Book Reader Case' || product.getProductTypeName() == 'Book Case'}">
+                                            <div class="product_text">
+                                                <td th:text="${product.getCaseBrand()}"></td>
                                             </div>
                                         </div>
-                                    </a>
-                                </div>
-                                <div class="cart_product_price product_text">
-                                    <div th:if="${product.isOnDiscount()}">
-                                        <div class="align-items-start justify-content-start">
-                                            <!-- when no sale delete -->
-                                            <div class="cart_sale_price"><b><td th:text="${product.getDiscountRate() + '%' + 'off'}"></td></b></div>
-                                            <div class="cart_sale_price">
-                                                <del><td th:text="${product.getPrice()}"></td></del>
+                                        <!-- Tablet Brand -->
+                                        <div th:if="${product.getProductTypeName() == 'E-Book Reader'}">
+                                            <div class="product_text">
+                                                <td th:text="${product.getReaderBrand()}"></td>
                                             </div>
                                         </div>
                                     </div>
-                                    <span>Price:</span> <span style="display:block" th:text="${product.getPrice() - product.getPrice() * product.getDiscountRate() + '₺'}"></span>
+                                </a>
+                            </div>
+                            <div class="cart_product_price product_text">
+                                <div th:if="${product.isOnDiscount()}">
+                                    <div class="align-items-start justify-content-start">
+                                        <!-- when no sale delete -->
+                                        <div class="cart_sale_price"><b><td th:text="${product.getDiscountRate() + '%' + 'off'}"></td></b></div>
+                                        <div class="cart_sale_price">
+                                            <del><td th:text="${product.getPrice()}"></td></del>
+                                        </div>
+                                    </div>
                                 </div>
-                            </li>
-                        </tr>
-                    </span>
-                    <!-- No Wish List -->
-                    <span th:if="${#lists.isEmpty(wishListProducts)}">
-                        <div class="warning-text">There are no Products.</div>
-                    </span>
+                                <span>Price:</span> <span style="display:block" th:text="${product.getPrice() - product.getPrice() * product.getDiscountRate() + '₺'}"></span>
+                            </div>
+                        </li>
+                    </tr>
+
                 </ul>
             </div>
 
@@ -93,7 +88,7 @@
 
                 <!-- Previous button -->
                 <li th:style="${currentPage == 1} ? 'display:none'">
-                    <a th:href="@{/user-details#wish-list(size=${wishListPage.size}, page=${currentPage - 1})}"
+                    <a th:href="@{/user-details/{id}#wish-list(id=${user.getUserId()}, size=${wishListPage.size}, page=${currentPage - 1})}"
                        aria-label="Previous" title="Previous Page"
                        rel="tooltip">
                         <i class="pagination_arrow fa fa-angle-left"></i>
@@ -103,7 +98,7 @@
                 <!-- First page -->
                 <li th:if="${wishListPage.totalPages > 0}"
                     th:class="${currentPage == 1} ? 'active'">
-                    <a th:href="@{/user-details#wish-list(size=${wishListPage.size}, page=${1})}"
+                    <a th:href="@{/user-details/{id}#wish-list(id=${user.getUserId()},size=${wishListPage.size}, page=${1})}"
                        th:title="${'Page '+ 1}"
                        th:text="${1}" style="color: #fbaa1d;">
                     </a>
@@ -116,7 +111,7 @@
                     th:each="i : ${#numbers.sequence(currentPage - 2 > 1 ? currentPage - 2 : 2
                                                                                 , wishListPage.totalPages > 2 + currentPage ? currentPage + 2 : wishListPage.totalPages - 1, 1)}"
                     th:class="${currentPage == i} ? 'active'">
-                    <a th:href="@{/user-details#wish-list(size=${wishListPage.size}, page=${i})}"
+                    <a th:href="@{/user-details/{id}#wish-list(id=${user.getUserId()},size=${wishListPage.size}, page=${i})}"
                        th:text="${i}" th:title="${'Page '+ i}"
                        style="color: #fbaa1d;"></a>
                 </li>
@@ -127,7 +122,7 @@
                 <!-- Last page -->
                 <li th:if="${wishListPage.totalPages > 1}"
                     th:class="${currentPage == wishListPage.totalPages} ? 'active'">
-                    <a th:href="@{/user-details#wish-list(size=${wishListPage.size}, page=${wishListPage.totalPages})}"
+                    <a th:href="@{/user-details/{id}#wish-list(id=${user.getUserId()},size=${wishListPage.size}, page=${wishListPage.totalPages})}"
                        th:text="${wishListPage.totalPages}"
                        style="color: #fbaa1d;"
                        th:title="${'Page '+ wishListPage.totalPages}">
@@ -136,7 +131,7 @@
 
                 <!-- Next button -->
                 <li th:style="${currentPage == wishListPage.totalPages} ? 'display:none'">
-                    <a th:href="@{/user-details#wish-list(size=${wishListPage.size}, page=${currentPage + 1})}"
+                    <a th:href="@{/user-details/{id}#wish-list(id=${user.getUserId()},size=${wishListPage.size}, page=${currentPage + 1})}"
                        aria-label="Next" title="Next Page" rel="tooltip">
                         <i class="pagination_arrow fa fa-angle-right"></i>
                     </a>
